# ComfyUI_Light_A_Video

./: Light_A_Video_node.py  README.md  __init__.py  lav_cog_relight.py  lav_paint.py  lav_relight.py  lav_wan_relight.py  node_utils.py  pyproject.toml  requirements.txt  sam2.py
configs/cog_relight/: bear.yaml
configs/wan_relight/: bear.yaml  man.yaml
sd_repo/: README.md  model_index.json
sd_repo/feature_extractor/: preprocessor_config.json
sd_repo/safety_checker/: config.json
sd_repo/text_encoder/: config.json
sd_repo/unet/: config.json
sd_repo/vae/: config.json
src/: animatediff_inpaint_pipe.py  animatediff_pipe.py  cogvideo_ddim.py  cogvideo_pipe.py  ic_light.py  tools.py  wan_flowmatch.py  wan_pipe.py
utils/: tools.py
