[project]
name = "light_a_video"
description = "Light-A-Video: Training-free Video Relighting via Progressive Light Fusion,you can use it in comfyUI"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["#diffusers==0.32.1", "diffusers", "#transformers==4.47.1", "transformers", "opencv-python", "safetensors", "pillow", "einops", "peft", "imageio", "omegaconf", "#ultralytic", "tqdm==4.67.1", "protobuf==3.20", "torch", "torchvision", "moviepy"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Light_A_Video"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_Light_A_Video"
Icon = ""
